# discrete-subtrajectory-clustering-test-suite

./: .gitignore  README.md  main.py
agarwal/our_score/: greedy.py  ioUtils.py  run.py
agarwal/podman/: podman.sh
data/: jobs.py  plots.py
data/mapconstruction/: athens_large.out  athens_small.out  athens_small_1_-2.out  athens_small_1_-3.out  athens_small_1_-4.out  athens_small_1_-5.out  athens_small_1_-6.out  berlin_large_10_1.out  chicago_1_10.out  chicago_1_2.out  chicago_1_3.out  chicago_1_4.out  chicago_1_5.out  chicago_1_6.out  chicago_1_7.out  chicago_1_8.out  chicago_1_9.out  chicago_2_1.out  chicago_2_4.out  chicago_2_5.out  chicago_2_6.out  chicago_2_7.out  chicago_2_8.out  chicago_3_1.out  chicago_4_1.out  chicago_5_1.out  chicago_6_1.out
data/plots/: .gitignore
data/synth/: synth.py  synth_100_100_05.out  synth_100_100_09.out  synth_100_100_095.out  synth_200_50_05.out  synth_200_50_09.out  synth_200_50_095.out
java/: README.md  artemis-12.yml  artemis-4.yml  config.yml  run.sh
java/podman/: podman.sh
java/runconfigurations/: remove_files
java/runconfigurations/car/: chicago_min.pbs
java/runconfigurations/car_small/: athens_xsmall.pbs  athens_xxsmall.pbs  chicago_xxmin.pbs
java/runconfigurations/hiking/: delta_llobregat.pbs  garraf.pbs  montseny_turohome.pbs
java/runconfigurations/hiking_small/: delta_llobregat_xupdate.pbs  montseny_intersection.pbs
java/src/main/java/mapconstruction/GUI/datastorage/: ConstantsStorage.java  Data.java
java/src/main/java/mapconstruction/GUI/filter/: AttributeTriPredicate.java  BooleanTriPredicates.java  CompositeTriPredicate.java
java/src/main/java/mapconstruction/GUI/io/: FileNameExtensionFilterExt.java  OutputManager.java  TrajectoryReader.java
java/src/main/java/mapconstruction/GUI/listeners/: BundleChangeEvent.java  BundleChangeListener.java  DiagramChangeListener.java  FilterChangeListener.java  TrajectoryChangeEvent.java
java/src/main/java/mapconstruction/algorithms/: AbortableAlgorithm.java  AbstractTrajectoryAlgorithm.java  ProgressAlgorithm.java
java/src/main/java/mapconstruction/attributes/: BundleClassAttribute.java  BundleClassAttributes.java
java/src/main/java/mapconstruction/benchmark/: BundleRenderer.java
java/src/main/java/mapconstruction/trajectories/: Bundle.java  Representative.java  SimplifiedTrajectory.java  Subtrajectory.java
java/src/main/java/mapconstruction/util/: Coordinate.java  FPComparer.java  GeometryUtil.java  OutParam.java  ToDoubleTriFunction.java
java/src/main/java/mapconstruction/web/: Controller.java  RestServerApp.java
java/src/main/java/mapconstruction/workers/: AbortableAlgorithmWorker.java  ComputeBundleCutoff.java  ComputeEvolutionDiagram.java  ComputeGroundTruthCutoff.java
java/src/main/java/trajectorycutter/: trajectoryCutter.java
java/src/main/resources/assets/css/: menu-bundle.css
java/src/main/resources/assets/js/: serverless.js  stats.js
java/src/test/java/mapconstruction/trajectories/: BundleTest.java  SimplifiedTrajectoryTest.java  SubtrajectoryTest.java
java_bbgll/: .gitignore  compile.sh  general-config.yml  pom.xml  web-config.yml
java_bbgll/podman/: Dockerfile  podman.sh
java_bbgll/runconfigurations/: README.md  package.pbs
java_bbgll/runconfigurations/car/: athens_small.pbs
java_bbgll/runconfigurations/hiking/: aiguamolls_baixemporda.pbs
java_bbgll/runconfigurations/hiking_small/: aiguamolls_baixemporda_small.pbs  garraf_intersection.pbs  garraf_xupdate.pbs  kevin_2018_xsmall.pbs  montseny_turohome_xsmall.pbs
java_bbgll/src/main/java/mapconstruction/algorithms/: TrajectoryAlgorithm.java
java_bbgll/src/main/java/mapconstruction/attributes/: BundleAttribute.java
java_bbgll/src/main/java/mapconstruction/benchmark/: Benchmark.java  Timing.java
java_bbgll/src/main/java/mapconstruction/exceptions/: AlgorithmAbortedException.java
java_bbgll/src/main/java/mapconstruction/starter/: Starter.java
java_bbgll/src/main/java/mapconstruction/trajectories/: FullTrajectory.java  Subtrajectory.java  Trajectory.java  UndirectionalBundle.java
java_bbgll/src/main/java/mapconstruction/util/: ColorScheme.java  LinearRegression.java  OrthogonalUtil.java  Pair.java  Triplet.java
java_bbgll/src/main/java/mapconstruction/web/: APIService.java  RestServerConfig.java
java_bbgll/src/main/java/mapconstruction/workers/: ComputeEvolutionDiagram.java
java_bbgll/src/main/resources/assets/: index.html
java_bbgll/src/main/resources/assets/css/: main.css  maps.css  menu-pages.css
java_bbgll/src/main/resources/assets/js/: cheatsheet.js  controller.js  doc-example.txt
java_bbgll/src/main/resources/assets/semantic/: package.json
java_bbgll/src/test/java/mapconstruction/: TestUtil.java
java_bbgll/src/test/java/mapconstruction/trajectories/: FullTrajectoryTest.java  TrajectoryTestCases.java  UndirectionalBundleTest.java
java_bbgll/src/test/java/mapconstruction/util/: GeometryUtilTest.java
movetk/: compile.sh
movetk/examples/: CMakeLists.txt  clustering.cpp
movetk/podman/: Dockerfile  podman.sh
movetk/src/include/movetk/: Clustering.h
our_code/: .gitignore  meson.build  meson_options.txt  readme.md
our_code/ext/: recycling_object_pool.h  union_find.h
our_code/podman/: Dockerfile  podman.sh
our_code/src/: basic_clustering.cpp  basic_clustering_algo.h  curve_simplification.h  frechet_distance.h  free_space_graph.h  free_space_graph_incremental.h  io.h  kcluster.cpp  kcluster_algo.h  kcluster_detail.h  kdtree_range_search.h  metric_space.h  profiling.cpp  profiling.h  subtrajectory_cluster.h  subtrajectory_clustering.cpp  subtrajectory_clustering_algo.h  subtrajectory_routine_bbgll.h  subtrajectory_routine_rightstep.h  trajectory.h  trajectory_bbgll.cpp  utility.h  validation.h
our_code/test/: frechet_distance_test.cpp  free_space_incremental_test.cpp  free_space_test.cpp  kcluster_test.cpp  range_search_test.cpp  subtrajectory_cluster_test.cpp  test_spaces.h
podman/: .gitignore  Dockerfile
script/: cli.py  common.py  fred.py  javafy.py  plot.py  reduce.py  run.py  score.py  visualize.py
(+164 files in other folders)
